--- a/debian-12-libell/suite/bookworm/debian/changelog
+++ b/debian-12-libell/suite/bookworm/debian/changelog
@@ -1,8 +1,24 @@
-ell (0.63-1bbbio0~bookworm+20240314) bookworm; urgency=low
+ell (0.64-1bbbio0~bookworm+20240402) bookworm; urgency=low
 
-  * Rebuild ell_0.63-1 for repos.rcn-ee.com
+  * Rebuild ell_0.64-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 14 Mar 2024 10:57:47 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 02 Apr 2024 10:00:03 -0500
+
+ell (0.64-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+  [ Jonas Smedegaard ]
+  * enable LFS support for HPPA,
+    by setting future=+lfs in DEB_BUILD_MAINT_OPTIONS;
+    closes: bug#1031125, thanks to Helge Deller
+  * update symbols:
+    + add 1 symbol
+    + strip debian revision from 5 symbols
+  * drop obsolete Homepage URI
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sat, 30 Mar 2024 13:03:54 +0100
 
 ell (0.63-1) unstable; urgency=medium
 
