--- a/debian-12-iwd/suite/bookworm/debian/changelog
+++ b/debian-12-iwd/suite/bookworm/debian/changelog
@@ -1,8 +1,30 @@
-iwd (2.15-1bbbio1~bookworm+20240314) bookworm; urgency=low
+iwd (2.17-1bbbio0~bookworm+20240402) bookworm; urgency=low
 
-  * Rebuild iwd_2.15-1 for repos.rcn-ee.com
+  * Rebuild iwd_2.17-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 14 Mar 2024 11:35:51 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 02 Apr 2024 10:15:57 -0500
+
+iwd (2.17-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release;
+
+  [ Jonas Smedegaard ]
+  * tighten build-dependency on libell-dev
+
+ -- Jonas Smedegaard <dr@jones.dk>  Sat, 30 Mar 2024 13:54:04 +0100
+
+iwd (2.16-1) unstable; urgency=high
+
+  [ upstream ]
+  * new release;
+    fixes CVE-2024-28084;
+    closes: bug#1065443, thanks to Salvatore Bonaccorso
+
+  [ Jonas Smedegaard ]
+  * set urgency=high due to security bugfix
+
+ -- Jonas Smedegaard <dr@jones.dk>  Tue, 05 Mar 2024 06:28:42 +0100
 
 iwd (2.15-1) unstable; urgency=medium
 
