bb-code-server (4.22.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/buster/debian/changelog
+++ b/bb-code-server/suite/buster/debian/changelog
@@ -1,11 +1,11 @@
-bb-code-server (4.16.1.1-0~buster+20231003) buster; urgency=low
+bb-code-server (4.22.0.0-0~buster+20240403) buster; urgency=low
 
-  * Debian Bookworm 12, forced to disable --cert to get code-server to start -> https://github.com/coder/code-server/issues/5162
   * Changed
-  * --Updated to Code 1.80.2
+  * --Updated to Code 1.87.0
+  * --Updated to Node 18.17.1
   * Added
   * --trusted-origin flag for specifying origins that you trust but do not control (for example a reverse proxy).
   * --disable-proxy flag. This disables the domain and path proxies but it does not disable the ports panel in Code. That can be disabled by using remote.autoForwardPorts=false in your settings.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Oct 2023 20:53:21 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Apr 2024 11:58:25 -0500
 
