bb-usb-gadgets (1.20240403.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-usb-gadgets/suite/focal/debian/changelog
+++ b/bb-usb-gadgets/suite/focal/debian/changelog
@@ -1,6 +1,6 @@
-bb-usb-gadgets (1.20231003.1-0~focal+20231003) focal; urgency=low
+bb-usb-gadgets (1.20240403.0-0~focal+20240403) focal; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-usb-gadgets_1.20240403.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Oct 2023 21:28:42 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Apr 2024 13:26:42 -0500
 
