--- a/bb-usb-gadgets/suite/trixie/debian/changelog
+++ b/bb-usb-gadgets/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-usb-gadgets (1.20240403.0-0~bookworm+20240403) bookworm; urgency=low
+bb-usb-gadgets (1.20240403.0-0~trixie+20240403) trixie; urgency=low
 
   * Rebuild bb-usb-gadgets_1.20240403.0-0 for repos.rcn-ee.com
 
