--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20240402.0-0~bullseye+20240402) bullseye; urgency=low
+bbb.io-kernel (1.20240406.0-0~bullseye+20240406) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.9.0-rc2-bone3
+  * linux-image-6.8.4-bone10
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 02 Apr 2024 15:47:32 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Sat, 06 Apr 2024 15:16:32 -0500
 
