--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20240406.0-0~focal+20240406) focal; urgency=low
+bbb.io-kernel (1.20240416.0-0~focal+20240416) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-6.8.4-bone10
+  * linux-image-6.8.6-bone11
+  * linux-image-6.9.0-rc4-bone4
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sat, 06 Apr 2024 15:16:32 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 16 Apr 2024 08:27:17 -0500
 
