--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,8 +1,14 @@
-bbb.io-kernel (1.20240416.0-0~noble+20240416) noble; urgency=low
+bbb.io-kernel (1.20240417.0-0~noble+20240417) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.8.6-bone11
-  * linux-image-6.9.0-rc4-bone4
+  * linux-image-6.6.25-armv7-lpae-x13
+  * linux-image-6.6.25-armv7-rt-x13
+  * linux-image-6.6.25-armv7-x13
+  * linux-image-6.6.25-bone13
+  * linux-image-6.6.25-bone-rt-r13
+  * linux-image-6.7.10-bone18
+  * linux-image-6.8.6-bone12
+  * linux-image-6.9.0-rc4-bone5
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 16 Apr 2024 08:27:17 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 17 Apr 2024 08:58:38 -0500
 
