--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,15 +1,8 @@
-bbb.io-kernel (1.20240421.0-0~trixie+20240421) trixie; urgency=low
+bbb.io-kernel (1.20240430.0-0~trixie+20240430) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.1.83-armv7-lpae-x9
-  * linux-image-6.1.83-armv7-rt-x9
-  * linux-image-6.1.83-armv7-x9
-  * linux-image-6.1.83-bone32
-  * linux-image-6.1.83-bone-rt-r32
-  * linux-image-6.2.16-bone22
-  * linux-image-6.3.13-bone32
-  * linux-image-6.4.16-bone24
-  * linux-image-6.5.13-bone17
+  * linux-image-6.8.8-bone14
+  * linux-image-6.9.0-rc6-bone7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Sun, 21 Apr 2024 11:55:49 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 30 Apr 2024 09:39:52 -0500
 
