generic-sys-mods (1.20240429.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/generic-sys-mods/suite/trixie/debian/changelog
+++ b/generic-sys-mods/suite/trixie/debian/changelog
@@ -1,6 +1,8 @@
-generic-sys-mods (1.20240111.0-0~trixie+20240111) trixie; urgency=low
+generic-sys-mods (1.20240429.0-0~trixie+20240430) trixie; urgency=low
 
   * Call bb-setup-mac-address directly in the usb scripts
+  * add basic bbbio-set-sysconf.service
+  * raspi-config 20240424
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 11 Jan 2024 12:40:25 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 30 Apr 2024 09:54:11 -0500
 
