bb-code-server (4.89.1.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/noble/debian/changelog
+++ b/bb-code-server/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-code-server (4.89.1.0-0~buster+20240516) buster; urgency=low
+bb-code-server (4.89.1.0-0~noble+20240516) noble; urgency=low
 
   * Changed
   * --Updated to Code 1.89.0
