--- a/apindex/suite/noble/debian/changelog
+++ b/apindex/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-apindex (2.2-1.20231128.1-0~bookworm+20240604) bookworm; urgency=low
+apindex (2.2-1.20231128.1-0~noble+20240604) noble; urgency=low
 
   * apindex for docker.io builders
 
