--- a/debian-12-iwd/suite/noble/debian/changelog
+++ b/debian-12-iwd/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-iwd (2.18-1bbbio0~bookworm+20240606) bookworm; urgency=low
+iwd (2.18-1bbbio0~noble+20240606) noble; urgency=low
 
   * Rebuild iwd_2.18-1 for repos.rcn-ee.com
 
