bb-code-server (4.90.1)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/noble/debian/changelog
+++ b/bb-code-server/suite/noble/debian/changelog
@@ -1,11 +1,8 @@
-bb-code-server (4.89.1.0-0~noble+20240516) noble; urgency=low
+bb-code-server (4.90.1.0-0~noble+20240613) noble; urgency=low
 
   * Changed
-  * --Updated to Code 1.89.0
-  * --Updated to Node 18.18.2
-  * Added
-  * --trusted-origin flag for specifying origins that you trust but do not control (for example a reverse proxy).
-  * --disable-proxy flag. This disables the domain and path proxies but it does not disable the ports panel in Code. That can be disabled by using remote.autoForwardPorts=false in your settings.
+  * Updated to Code 1.90.0.
+  * Updated Node to 20.11.1.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 16 May 2024 09:33:39 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 13 Jun 2024 17:49:03 -0500
 
