--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,7 +1,10 @@
-bbb.io-kernel (1.20240513.0-0~noble+20240513) noble; urgency=low
+bbb.io-kernel (1.20240617.0-0~noble+20240617) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.9.0-bone8
+  * linux-image-6.10.0-rc4-bone1
+  * linux-image-6.6.32-ti-arm32-r4
+  * linux-image-6.6.32-ti-rt-arm32-r4
+  * linux-image-6.9.5-bone9
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 13 May 2024 16:27:38 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 17 Jun 2024 22:31:42 -0500
 
