bb-wlan0-defaults (1.20240625.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wlan0-defaults/suite/trixie/debian/changelog
+++ b/bb-wlan0-defaults/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-bb-wlan0-defaults (1.20240625.0-0~jammy+20240625) jammy; urgency=low
+bb-wlan0-defaults (1.20240625.0-0~trixie+20240625) trixie; urgency=low
 
   * udev call hostapd@SoftAp0.service directly
 
