--- a/bb-wlan0-defaults/suite/noble/debian/changelog
+++ b/bb-wlan0-defaults/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-wlan0-defaults (1.20240625.0-0~jammy+20240625) jammy; urgency=low
+bb-wlan0-defaults (1.20240625.0-0~noble+20240625) noble; urgency=low
 
   * udev call hostapd@SoftAp0.service directly
 
