+bb-usb-gadgets (1.20240625.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-usb-gadgets/suite/noble/debian/changelog
+++ b/bb-usb-gadgets/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-usb-gadgets (1.20240625.0-0~trixie+20240625) trixie; urgency=low
+bb-usb-gadgets (1.20240625.0-0~noble+20240625) noble; urgency=low
 
   * Rebuild bb-usb-gadgets_1.20240625.0-0 for repos.rcn-ee.com
 
