--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,12 +1,17 @@
-bbb.io-kernel (1.20240702.0-0~trixie+20240702) trixie; urgency=low
+bbb.io-kernel (1.20240703.0-0~trixie+20240703) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.0-rc6-bone3
-  * linux-image-6.6.32-ti-arm32-r5
-  * linux-image-6.6.32-ti-rt-arm32-r5
-  * linux-image-6.7.12-bone20
-  * linux-image-6.8.12-bone15
-  * linux-image-6.9.7-bone10
+  * linux-image-5.10.168-ti-r78
+  * linux-image-5.10.168-ti-rt-r78
+  * linux-image-6.1.83-ti-r35
+  * linux-image-6.1.83-ti-rt-r35
+  * linux-image-6.6.32-ti-arm32-r6
+  * linux-image-6.6.32-ti-rt-arm32-r6
+  * linux-image-6.6.36-armv7-lpae-x15
+  * linux-image-6.6.36-armv7-rt-x15
+  * linux-image-6.6.36-armv7-x15
+  * linux-image-6.6.36-bone15
+  * linux-image-6.6.36-bone-rt-r15
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 02 Jul 2024 09:10:48 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 06:30:31 -0500
 
