--- a/bb-beagle-version/suite/bookworm/debian/changelog
+++ b/bb-beagle-version/suite/bookworm/debian/changelog
@@ -1,6 +1,6 @@
-bb-beagle-version (1.20231006.0-0~bookworm+20231006) bookworm; urgency=low
+bb-beagle-version (1.20240703.0-0~bookworm+20240703) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-beagle-version_1.20240703.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 06 Oct 2023 16:26:40 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 11:33:50 -0500
 
