--- a/bb-beagle-version/suite/noble/debian/changelog
+++ b/bb-beagle-version/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-beagle-version (1.20240703.0-0~bullseye+20240703) bullseye; urgency=low
+bb-beagle-version (1.20240703.0-0~noble+20240703) noble; urgency=low
 
   * Rebuild bb-beagle-version_1.20240703.0-0 for repos.rcn-ee.com
 
