bb-wl18xx-firmware (1.20230703.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-wl18xx-firmware/suite/jammy/debian/changelog
+++ b/bb-wl18xx-firmware/suite/jammy/debian/changelog
@@ -1,6 +1,6 @@
-bb-wl18xx-firmware (1.20230414.0-0~jammy+20230414) jammy; urgency=low
+bb-wl18xx-firmware (1.20230703.0-0~jammy+20240703) jammy; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-wl18xx-firmware_1.20230703.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 12:48:28 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 11:59:30 -0500
 
