--- a/bb-wl18xx-firmware/suite/noble/debian/changelog
+++ b/bb-wl18xx-firmware/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-wl18xx-firmware (1.20230703.0-0~bullseye+20240703) bullseye; urgency=low
+bb-wl18xx-firmware (1.20230703.0-0~noble+20240703) noble; urgency=low
 
   * Rebuild bb-wl18xx-firmware_1.20230703.0-0 for repos.rcn-ee.com
 
