--- a/bb-wl18xx-firmware/suite/bookworm/debian/changelog
+++ b/bb-wl18xx-firmware/suite/bookworm/debian/changelog
@@ -1,6 +1,6 @@
-bb-wl18xx-firmware (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
+bb-wl18xx-firmware (1.20230703.0-0~bookworm+20240703) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-wl18xx-firmware_1.20230703.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 12:48:28 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 11:59:30 -0500
 
