bb-bbai-firmware (1.20240703.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-bbai-firmware/suite/bullseye/debian/changelog
+++ b/bb-bbai-firmware/suite/bullseye/debian/changelog
@@ -1,6 +1,6 @@
-bb-bbai-firmware (1.20230414.0-0~bullseye+20230414) bullseye; urgency=low
+bb-bbai-firmware (1.20240703.0-0~bullseye+20240703) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-bbai-firmware_1.20240703.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 11:42:18 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 12:10:13 -0500
 
