--- a/bb-bbai-firmware/suite/bookworm/debian/changelog
+++ b/bb-bbai-firmware/suite/bookworm/debian/changelog
@@ -1,6 +1,6 @@
-bb-bbai-firmware (1.20230414.0-0~bookworm+20230414) bookworm; urgency=low
+bb-bbai-firmware (1.20240703.0-0~bookworm+20240703) bookworm; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild bb-bbai-firmware_1.20240703.0-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 14 Apr 2023 11:42:18 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 12:10:13 -0500
 
