--- a/bb-bbai-firmware/suite/noble/debian/changelog
+++ b/bb-bbai-firmware/suite/noble/debian/changelog
@@ -1,4 +1,4 @@
-bb-bbai-firmware (1.20240703.0-0~jammy+20240703) jammy; urgency=low
+bb-bbai-firmware (1.20240703.0-0~noble+20240703) noble; urgency=low
 
   * Rebuild bb-bbai-firmware_1.20240703.0-0 for repos.rcn-ee.com
 
