--- a/SanCloud-Firmware/suite/bullseye/debian/changelog
+++ b/SanCloud-Firmware/suite/bullseye/debian/changelog
@@ -1,6 +1,6 @@
-sancloud-firmware (0.1.0.20220309.1-0~bullseye+20220727) bullseye; urgency=low
+sancloud-firmware (0.1.0.20220309.2-0~bullseye+20240703) bullseye; urgency=low
 
-  * Rebuild for repos.rcn-ee.com
+  * Rebuild sancloud-firmware_0.1.0.20220309.2-0 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 27 Jul 2022 10:40:44 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 12:28:27 -0500
 
