--- a/SanCloud-Firmware/suite/bookworm/debian/changelog
+++ b/SanCloud-Firmware/suite/bookworm/debian/changelog
@@ -1,4 +1,4 @@
-sancloud-firmware (0.1.0.20220309.2-0~focal+20240703) focal; urgency=low
+sancloud-firmware (0.1.0.20220309.2-0~bookworm+20240703) bookworm; urgency=low
 
   * Rebuild sancloud-firmware_0.1.0.20220309.2-0 for repos.rcn-ee.com
 
