--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,17 +1,9 @@
-bbb.io-kernel (1.20240703.0-0~jammy+20240703) jammy; urgency=low
+bbb.io-kernel (1.20240708.0-0~jammy+20240708) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r78
-  * linux-image-5.10.168-ti-rt-r78
-  * linux-image-6.1.83-ti-r35
-  * linux-image-6.1.83-ti-rt-r35
-  * linux-image-6.6.32-ti-arm32-r6
-  * linux-image-6.6.32-ti-rt-arm32-r6
-  * linux-image-6.6.36-armv7-lpae-x15
-  * linux-image-6.6.36-armv7-rt-x15
-  * linux-image-6.6.36-armv7-x15
-  * linux-image-6.6.36-bone15
-  * linux-image-6.6.36-bone-rt-r15
+  * linux-image-6.10.0-rc7-bone4
+  * linux-image-6.6.32-ti-arm32-r7
+  * linux-image-6.6.32-ti-rt-arm32-r7
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 03 Jul 2024 06:30:31 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 08 Jul 2024 19:16:41 -0500
 
