--- a/debian-12-libell/suite/trixie/debian/changelog
+++ b/debian-12-libell/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-ell (0.67-1bbbio0~noble+20240710) noble; urgency=low
+ell (0.67-1bbbio0~trixie+20240710) trixie; urgency=low
 
   * Rebuild ell_0.67-1 for repos.rcn-ee.com
 
