--- a/debian-12-iwd/suite/bookworm/debian/changelog
+++ b/debian-12-iwd/suite/bookworm/debian/changelog
@@ -1,8 +1,19 @@
-iwd (2.18-1bbbio0~bookworm+20240606) bookworm; urgency=low
+iwd (2.19-1bbbio0~bookworm+20240710) bookworm; urgency=low
 
-  * Rebuild iwd_2.18-1 for repos.rcn-ee.com
+  * Rebuild iwd_2.19-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 06 Jun 2024 17:26:02 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Jul 2024 20:35:18 -0500
+
+iwd (2.19-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release;
+
+  [ Jonas Smedegaard ]
+  * tighten build-dependency on libell-dev
+  * unfuzz patch 1001
+
+ -- Jonas Smedegaard <dr@jones.dk>  Wed, 10 Jul 2024 08:59:26 +0200
 
 iwd (2.18-1) unstable; urgency=medium
 
