--- a/debian-12-iwd/suite/trixie/debian/changelog
+++ b/debian-12-iwd/suite/trixie/debian/changelog
@@ -1,4 +1,4 @@
-iwd (2.19-1bbbio0~noble+20240710) noble; urgency=low
+iwd (2.19-1bbbio0~trixie+20240710) trixie; urgency=low
 
   * Rebuild iwd_2.19-1 for repos.rcn-ee.com
 
