--- a/debian-12-iwd/suite/trixie/debian/changelog
+++ b/debian-12-iwd/suite/trixie/debian/changelog
@@ -1,3 +1,9 @@
+iwd (2.19-1bbbio1~trixie+20240710) trixie; urgency=low
+
+  * Rebuild iwd_2.19-1 for repos.rcn-ee.com
+
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Jul 2024 20:48:20 -0500
+
 iwd (2.19-1bbbio0~trixie+20240710) trixie; urgency=low
 
   * Rebuild iwd_2.19-1 for repos.rcn-ee.com
