bbb.io-kernel (1.20240715.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,9 +1,7 @@
-bbb.io-kernel (1.20240708.0-0~trixie+20240708) trixie; urgency=low
+bbb.io-kernel (1.20240715.0-0~trixie+20240715) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.0-rc7-bone4
-  * linux-image-6.6.32-ti-arm32-r7
-  * linux-image-6.6.32-ti-rt-arm32-r7
+  * linux-image-6.10.0-bone5
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 08 Jul 2024 19:16:41 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jul 2024 11:26:06 -0500
 
