--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20240717.0-0~noble+20240717) noble; urgency=low
+bbb.io-kernel (1.20240723.0-0~noble+20240723) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.0-bone6
+  * linux-image-5.10.168-ti-r79
+  * linux-image-5.10.168-ti-rt-r79
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 17 Jul 2024 20:16:12 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 23 Jul 2024 10:33:32 -0500
 
