bbb.io-kernel (1.20240808.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,8 +1,17 @@
-bbb.io-kernel (1.20240723.0-0~noble+20240723) noble; urgency=low
+bbb.io-kernel (1.20240808.0-0~noble+20240808) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r79
-  * linux-image-5.10.168-ti-rt-r79
+  * linux-image-6.10.3-bone8
+  * linux-image-6.1.102-armv7-lpae-x10
+  * linux-image-6.1.102-armv7-rt-x10
+  * linux-image-6.1.102-armv7-x10
+  * linux-image-6.1.102-bone33
+  * linux-image-6.1.102-bone-rt-r33
+  * linux-image-6.6.44-armv7-lpae-x16
+  * linux-image-6.6.44-armv7-rt-x16
+  * linux-image-6.6.44-armv7-x16
+  * linux-image-6.6.44-bone16
+  * linux-image-6.6.44-bone-rt-r16
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 23 Jul 2024 10:33:32 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 08 Aug 2024 12:06:36 -0500
 
