bbb.io-kernel (1.20240814.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,17 +1,7 @@
-bbb.io-kernel (1.20240808.0-0~bullseye+20240808) bullseye; urgency=low
+bbb.io-kernel (1.20240814.0-0~bullseye+20240814) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.3-bone8
-  * linux-image-6.1.102-armv7-lpae-x10
-  * linux-image-6.1.102-armv7-rt-x10
-  * linux-image-6.1.102-armv7-x10
-  * linux-image-6.1.102-bone33
-  * linux-image-6.1.102-bone-rt-r33
-  * linux-image-6.6.44-armv7-lpae-x16
-  * linux-image-6.6.44-armv7-rt-x16
-  * linux-image-6.6.44-armv7-x16
-  * linux-image-6.6.44-bone16
-  * linux-image-6.6.44-bone-rt-r16
+  * linux-image-6.11.0-rc3-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 08 Aug 2024 12:06:36 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 14 Aug 2024 12:42:29 -0500
 
