--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20240814.0-0~trixie+20240814) trixie; urgency=low
+bbb.io-kernel (1.20240815.0-0~trixie+20240815) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.11.0-rc3-bone1
+  * linux-image-6.10.5-bone9
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 14 Aug 2024 12:42:29 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 15 Aug 2024 11:02:36 -0500
 
