bbb.io-kernel (1.20240827.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20240815.0-0~focal+20240815) focal; urgency=low
+bbb.io-kernel (1.20240827.0-0~focal+20240827) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.5-bone9
+  * linux-image-6.11.0-rc5-bone3
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 15 Aug 2024 11:02:36 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 27 Aug 2024 09:07:19 -0500
 
