--- a/bbb.io-kernel/suite/focal/debian/changelog
+++ b/bbb.io-kernel/suite/focal/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20240827.0-0~focal+20240827) focal; urgency=low
+bbb.io-kernel (1.20240903.0-0~focal+20240903) focal; urgency=low
 
   * Kernel Updates
-  * linux-image-6.11.0-rc5-bone3
+  * linux-image-6.10.7-bone10
+  * linux-image-6.11.0-rc5-bone4
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 27 Aug 2024 09:07:19 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Sep 2024 08:46:14 -0500
 
