--- a/debian-12-libell/suite/bookworm/debian/changelog
+++ b/debian-12-libell/suite/bookworm/debian/changelog
@@ -1,8 +1,18 @@
-ell (0.67-1bbbio0~bookworm+20240710) bookworm; urgency=low
+ell (0.68-1bbbio0~bookworm+20240903) bookworm; urgency=low
 
-  * Rebuild ell_0.67-1 for repos.rcn-ee.com
+  * Rebuild ell_0.68-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Jul 2024 20:14:31 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Sep 2024 09:07:54 -0500
+
+ell (0.68-1) unstable; urgency=medium
+
+  [ upstream ]
+  * new release
+
+  [ Jonas Smedegaard ]
+  * update symbols: added 12 symbols
+
+ -- Jonas Smedegaard <dr@jones.dk>  Thu, 29 Aug 2024 11:07:18 +0200
 
 ell (0.67-1) unstable; urgency=medium
 
