--- a/debian-12-iwd/suite/bookworm/debian/changelog
+++ b/debian-12-iwd/suite/bookworm/debian/changelog
@@ -1,14 +1,19 @@
-iwd (2.19-1bbbio1~bookworm+20240710) bookworm; urgency=low
+iwd (2.20-1bbbio1~bookworm+20240903) bookworm; urgency=low
 
-  * Rebuild iwd_2.19-1 for repos.rcn-ee.com
+  * Rebuild iwd_2.20-1 for repos.rcn-ee.com
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Jul 2024 20:48:20 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Sep 2024 09:25:42 -0500
 
-iwd (2.19-1bbbio0~bookworm+20240710) bookworm; urgency=low
+iwd (2.20-1) unstable; urgency=medium
 
-  * Rebuild iwd_2.19-1 for repos.rcn-ee.com
+  [ upstream ]
+  * new release;
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 10 Jul 2024 20:35:18 -0500
+  [ Jonas Smedegaard ]
+  * update copyright info: update coverage
+  * tighten build-dependency on libell-dev
+
+ -- Jonas Smedegaard <dr@jones.dk>  Thu, 29 Aug 2024 17:41:59 +0200
 
 iwd (2.19-1) unstable; urgency=medium
 
