--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,8 +1,12 @@
-bbb.io-kernel (1.20240903.0-0~bullseye+20240903) bullseye; urgency=low
+bbb.io-kernel (1.20240904.0-0~bullseye+20240904) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.7-bone10
-  * linux-image-6.11.0-rc5-bone4
+  * linux-image-6.11.0-rc6-bone5
+  * linux-image-6.6.48-armv7-lpae-x17
+  * linux-image-6.6.48-armv7-rt-x17
+  * linux-image-6.6.48-armv7-x17
+  * linux-image-6.6.48-bone17
+  * linux-image-6.6.48-bone-rt-r17
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 03 Sep 2024 08:46:14 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 04 Sep 2024 10:08:31 -0500
 
