bb-code-server (4.93.1-0bbbio0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bb-code-server/suite/noble/debian/changelog
+++ b/bb-code-server/suite/noble/debian/changelog
@@ -1,8 +1,8 @@
-bb-code-server (4.90.3-0~noble+20240625) noble; urgency=low
+bb-code-server (4.93.1-0bbbio0~noble+20240926) noble; urgency=low
 
   * Changed
-  * Updated to Code 1.90.2.
+  * Updated to Code 1.93.1.
   * Updated Node to 20.11.1.
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 25 Jun 2024 14:02:18 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 26 Sep 2024 11:14:23 -0500
 
