--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20240917.0-0~trixie+20240917) trixie; urgency=low
+bbb.io-kernel (1.20241002.0-0~trixie+20241002) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.11.0-bone7
+  * linux-image-6.12.0-rc1-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 17 Sep 2024 11:27:49 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 02 Oct 2024 10:12:35 -0500
 
