--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,7 +1,8 @@
-bbb.io-kernel (1.20241002.0-0~bullseye+20241002) bullseye; urgency=low
+bbb.io-kernel (1.20241003.0-0~bullseye+20241003) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.0-rc1-bone1
+  * linux-image-6.10.12-bone12
+  * linux-image-6.11.1-bone8
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 02 Oct 2024 10:12:35 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 03 Oct 2024 11:34:12 -0500
 
