--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,8 +1,11 @@
-bbb.io-kernel (1.20241003.0-0~bookworm+20241003) bookworm; urgency=low
+bbb.io-kernel (1.20241004.0-0~bookworm+20241004) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.12-bone12
-  * linux-image-6.11.1-bone8
+  * linux-image-6.6.52-armv7-lpae-x19
+  * linux-image-6.6.52-armv7-rt-x19
+  * linux-image-6.6.52-armv7-x19
+  * linux-image-6.6.52-bone19
+  * linux-image-6.6.52-bone-rt-r19
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 03 Oct 2024 11:34:12 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Oct 2024 09:43:47 -0500
 
