--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,11 +1,7 @@
-bbb.io-kernel (1.20241004.0-0~bookworm+20241004) bookworm; urgency=low
+bbb.io-kernel (1.20241017.0-0~bookworm+20241017) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-6.6.52-armv7-lpae-x19
-  * linux-image-6.6.52-armv7-rt-x19
-  * linux-image-6.6.52-armv7-x19
-  * linux-image-6.6.52-bone19
-  * linux-image-6.6.52-bone-rt-r19
+  * linux-image-6.12.0-rc3-bone2
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Oct 2024 09:43:47 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 17 Oct 2024 10:56:51 -0500
 
