bbb.io-kernel (1.20241209.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,7 +1,18 @@
-bbb.io-kernel (1.20241112.0-0~jammy+20241112) jammy; urgency=low
+bbb.io-kernel (1.20241209.0-0~jammy+20241209) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.0-rc7-bone4
+  * linux-image-6.10.14-bone13
+  * linux-image-6.11.11-bone9
+  * linux-image-6.12.3-bone7
+  * linux-image-6.13.0-rc1-bone1
+  * linux-image-6.6.63-armv7-lpae-x20
+  * linux-image-6.6.63-armv7-rt-x20
+  * linux-image-6.6.63-armv7-x20
+  * linux-image-6.6.63-bone20
+  * linux-image-6.6.63-bone-rt-r20
+  * linux-image-6.7.12-bone21
+  * linux-image-6.8.12-bone16
+  * linux-image-6.9.12-bone11
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 12 Nov 2024 10:51:48 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 09 Dec 2024 09:30:30 -0600
 
