--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,7 +1,7 @@
-bbb.io-kernel (1.20241112.0-0~trixie+20241112) trixie; urgency=low
+bbb.io-kernel (1.20241209.0-0~trixie+20241209) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.0-rc7-bone4
+  * linux-image-6.12.1-bone6
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 12 Nov 2024 10:51:48 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 09 Dec 2024 09:30:30 -0600
 
