--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,6 +1,7 @@
-bbb.io-kernel (1.20241210.0-0~trixie+20241210) trixie; urgency=low
+bbb.io-kernel (1.20250121.0-0~trixie+20250121) trixie; urgency=low
 
   * Kernel Updates
+  * linux-image-6.13.0-bone6
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 10 Dec 2024 09:04:52 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 21 Jan 2025 08:48:14 -0600
 
