bbb.io-kernel (1.20250124.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,10 +1,12 @@
-bbb.io-kernel (1.20250121.0-0~bullseye+20250121) bullseye; urgency=low
+bbb.io-kernel (1.20250124.0-0~bullseye+20250124) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-6.10.14-bone14
-  * linux-image-6.11.11-bone10
-  * linux-image-6.12.10-bone9
-  * linux-image-6.13.0-bone6
+  * linux-image-5.10.168-ti-r80
+  * linux-image-5.10.168-ti-rt-r80
+  * linux-image-6.1.83-ti-r36
+  * linux-image-6.1.83-ti-rt-r36
+  * linux-image-6.6.58-ti-arm32-r8
+  * linux-image-6.6.58-ti-rt-arm32-r8
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 21 Jan 2025 08:48:14 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 24 Jan 2025 11:13:21 -0600
 
