--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,12 +1,9 @@
-bbb.io-kernel (1.20250128.0-0~noble+20250128) noble; urgency=low
+bbb.io-kernel (1.20250204.0-0~noble+20250204) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r81
-  * linux-image-5.10.168-ti-rt-r81
-  * linux-image-6.1.83-ti-r37
-  * linux-image-6.1.83-ti-rt-r37
-  * linux-image-6.6.58-ti-arm32-r9
-  * linux-image-6.6.58-ti-rt-arm32-r9
+  * linux-image-6.12.12-bone10
+  * linux-image-6.13.1-bone7
+  * linux-image-6.14.0-rc1-bone1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 28 Jan 2025 09:43:31 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 04 Feb 2025 09:38:54 -0600
 
