--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,8 +1,7 @@
-bbb.io-kernel (1.20250204.0-0~trixie+20250204) trixie; urgency=low
+bbb.io-kernel (1.20250205.0-0~trixie+20250205) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.13.1-bone7
-  * linux-image-6.14.0-rc1-bone1
+  * linux-image-6.12.9-ti-arm32-r5
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 04 Feb 2025 09:38:54 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 05 Feb 2025 09:14:01 -0600
 
