--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,6 +1,12 @@
-bbb.io-kernel (1.20250205.0-0~bullseye+20250205) bullseye; urgency=low
+bbb.io-kernel (1.20250206.0-0~bullseye+20250206) bullseye; urgency=low
 
   * Kernel Updates
+  * linux-image-5.10.168-ti-r82
+  * linux-image-5.10.168-ti-rt-r82
+  * linux-image-6.1.83-ti-r38
+  * linux-image-6.1.83-ti-rt-r38
+  * linux-image-6.6.58-ti-arm32-r10
+  * linux-image-6.6.58-ti-rt-arm32-r10
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 05 Feb 2025 09:14:01 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 06 Feb 2025 08:40:47 -0600
 
