--- a/bbb.io-kernel/suite/bullseye/debian/changelog
+++ b/bbb.io-kernel/suite/bullseye/debian/changelog
@@ -1,12 +1,28 @@
-bbb.io-kernel (1.20250206.0-0~bullseye+20250206) bullseye; urgency=low
+bbb.io-kernel (1.20250207.0-0~bullseye+20250207) bullseye; urgency=low
 
   * Kernel Updates
-  * linux-image-5.10.168-ti-r82
-  * linux-image-5.10.168-ti-rt-r82
-  * linux-image-6.1.83-ti-r38
-  * linux-image-6.1.83-ti-rt-r38
-  * linux-image-6.6.58-ti-arm32-r10
-  * linux-image-6.6.58-ti-rt-arm32-r10
+  * linux-image-6.10.14-bone15
+  * linux-image-6.11.11-bone11
+  * linux-image-6.1.127-armv7-lpae-x12
+  * linux-image-6.1.127-armv7-rt-x12
+  * linux-image-6.1.127-armv7-x12
+  * linux-image-6.1.127-bone35
+  * linux-image-6.1.127-bone-rt-r35
+  * linux-image-6.12.12-bone11
+  * linux-image-6.13.1-bone8
+  * linux-image-6.14.0-rc1-bone2
+  * linux-image-6.2.16-bone23
+  * linux-image-6.3.13-bone33
+  * linux-image-6.4.16-bone25
+  * linux-image-6.5.13-bone18
+  * linux-image-6.6.74-armv7-lpae-x22
+  * linux-image-6.6.74-armv7-rt-x22
+  * linux-image-6.6.74-armv7-x22
+  * linux-image-6.6.74-bone22
+  * linux-image-6.6.74-bone-rt-r22
+  * linux-image-6.7.12-bone22
+  * linux-image-6.8.12-bone17
+  * linux-image-6.9.12-bone12
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 06 Feb 2025 08:40:47 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 07 Feb 2025 13:51:53 -0600
 
