--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,13 +1,9 @@
-bbb.io-kernel (1.20250210.0-0~trixie+20250210) trixie; urgency=low
+bbb.io-kernel (1.20250212.0-0~trixie+20250212) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-5.15.177-armv7-lpae-x43
-  * linux-image-5.15.177-armv7-rt-x43
-  * linux-image-5.15.177-armv7-x43
-  * linux-image-5.15.177-bone43
-  * linux-image-5.15.177-bone-rt-r43
-  * linux-image-6.12.13-bone13
-  * linux-image-6.13.2-bone9
+  * linux-image-6.14.0-rc2-bone3
+  * linux-image-6.14.0-rc2-multiv7-r1
+  * linux-image-6.14.0-rc2-omap2plus-r1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 10 Feb 2025 10:54:19 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 12 Feb 2025 09:23:49 -0600
 
