bbb.io-kernel (1.20250213.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,9 +1,16 @@
-bbb.io-kernel (1.20250212.0-0~bookworm+20250212) bookworm; urgency=low
+bbb.io-kernel (1.20250213.0-0~bookworm+20250213) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-6.14.0-rc2-bone3
-  * linux-image-6.14.0-rc2-multiv7-r1
-  * linux-image-6.14.0-rc2-omap2plus-r1
+  * linux-image-5.10.233-armv7-lpae-x79
+  * linux-image-5.10.233-armv7-rt-x79
+  * linux-image-5.10.233-armv7-x79
+  * linux-image-5.10.233-bone79
+  * linux-image-5.10.233-bone-rt-r79
+  * linux-image-5.4.288-armv7-lpae-x69
+  * linux-image-5.4.288-armv7-rt-x69
+  * linux-image-5.4.288-armv7-x69
+  * linux-image-5.4.288-bone69
+  * linux-image-5.4.288-bone-rt-r69
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 12 Feb 2025 09:23:49 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 13 Feb 2025 08:50:36 -0600
 
