--- a/bb-u-boot-am335x-evm-debian-11-ubuntu-2204/suite/bookworm/debian/changelog
+++ b/bb-u-boot-am335x-evm-debian-11-ubuntu-2204/suite/bookworm/debian/changelog
@@ -1,6 +1,7 @@
-bb-u-boot-am335x-evm (2022.04.20240115.0-0~bookworm+20240115) bookworm; urgency=low
+bb-u-boot-am335x-evm (2022.04.20240115.1-0~bookworm+20250217) bookworm; urgency=low
 
   * v2022.04 - https://openbeagle.org/beagleboard/u-boot/-/tree/v2022.04-bbb.io-am335x-am57xx
+  * include binary u-boot-spl.bin for users doing spl serial bootup
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 15 Jan 2024 13:59:28 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 17 Feb 2025 15:23:18 -0600
 
