--- a/bbb.io-kernel/suite/jammy/debian/changelog
+++ b/bbb.io-kernel/suite/jammy/debian/changelog
@@ -1,11 +1,10 @@
-bbb.io-kernel (1.20250227.0-0~jammy+20250227) jammy; urgency=low
+bbb.io-kernel (1.20250303.0-0~jammy+20250303) jammy; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.16-bone16
-  * linux-image-6.13.4-bone11
-  * linux-image-6.14.0-rc4-bone5
-  * linux-image-6.14.0-rc4-multiv7-r1
-  * linux-image-6.14.0-rc4-omap2plus-r1
+  * linux-image-6.12.13-ti-arm32-r6
+  * linux-image-6.14.0-rc5-bone6
+  * linux-image-6.14.0-rc5-multiv7-r1
+  * linux-image-6.14.0-rc5-omap2plus-r1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 27 Feb 2025 08:29:02 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 03 Mar 2025 15:05:02 -0600
 
