--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,10 +1,10 @@
-bbb.io-kernel (1.20250303.0-0~noble+20250303) noble; urgency=low
+bbb.io-kernel (1.20250318.0-0~noble+20250318) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.13-ti-arm32-r6
-  * linux-image-6.14.0-rc5-bone6
-  * linux-image-6.14.0-rc5-multiv7-r1
-  * linux-image-6.14.0-rc5-omap2plus-r1
+  * linux-image-6.13.7-bone12
+  * linux-image-6.14.0-rc7-bone7
+  * linux-image-6.14.0-rc7-multiv7-r1
+  * linux-image-6.14.0-rc7-omap2plus-r1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Mon, 03 Mar 2025 15:05:02 -0600
+ -- Robert Nelson <robertcnelson@gmail.com>  Tue, 18 Mar 2025 09:39:59 -0500
 
