--- a/bbb.io-kernel/suite/bookworm/debian/changelog
+++ b/bbb.io-kernel/suite/bookworm/debian/changelog
@@ -1,10 +1,12 @@
-bbb.io-kernel (1.20250318.0-0~bookworm+20250318) bookworm; urgency=low
+bbb.io-kernel (1.20250404.0-0~bookworm+20250404) bookworm; urgency=low
 
   * Kernel Updates
-  * linux-image-6.13.7-bone12
-  * linux-image-6.14.0-rc7-bone7
-  * linux-image-6.14.0-rc7-multiv7-r1
-  * linux-image-6.14.0-rc7-omap2plus-r1
+  * linux-image-6.12.21-armv7-lpae-x1
+  * linux-image-6.12.21-bone17
+  * linux-image-6.13.8-bone13
+  * linux-image-6.14.0-bone8
+  * linux-image-6.14.0-multiv7-r1
+  * linux-image-6.14.0-omap2plus-r1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Tue, 18 Mar 2025 09:39:59 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Apr 2025 12:05:37 -0500
 
