bbb.io-kernel (1.20250409.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,12 +1,9 @@
-bbb.io-kernel (1.20250404.0-0~noble+20250404) noble; urgency=low
+bbb.io-kernel (1.20250409.0-0~noble+20250409) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.21-armv7-lpae-x1
-  * linux-image-6.12.21-bone17
-  * linux-image-6.13.8-bone13
-  * linux-image-6.14.0-bone8
-  * linux-image-6.14.0-multiv7-r1
-  * linux-image-6.14.0-omap2plus-r1
+  * linux-image-6.15.0-rc1-bone2
+  * linux-image-6.15.0-rc1-multiv7-r1
+  * linux-image-6.15.0-rc1-omap2plus-r1
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 04 Apr 2025 12:05:37 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Wed, 09 Apr 2025 11:23:14 -0500
 
