bbb.io-kernel (1.20250410.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,9 +1,10 @@
-bbb.io-kernel (1.20250409.0-0~trixie+20250409) trixie; urgency=low
+bbb.io-kernel (1.20250410.0-0~trixie+20250410) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.15.0-rc1-bone2
-  * linux-image-6.15.0-rc1-multiv7-r1
-  * linux-image-6.15.0-rc1-omap2plus-r1
+  * linux-image-6.12.22-armv7-lpae-x2
+  * linux-image-6.12.22-bone18
+  * linux-image-6.13.10-bone14
+  * linux-image-6.14.1-bone9
 
- -- Robert Nelson <robertcnelson@gmail.com>  Wed, 09 Apr 2025 11:23:14 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Thu, 10 Apr 2025 10:59:23 -0500
 
