bbb.io-kernel (1.20250411.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/noble/debian/changelog
+++ b/bbb.io-kernel/suite/noble/debian/changelog
@@ -1,10 +1,15 @@
-bbb.io-kernel (1.20250410.0-0~noble+20250410) noble; urgency=low
+bbb.io-kernel (1.20250411.0-0~noble+20250411) noble; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.22-armv7-lpae-x2
-  * linux-image-6.12.22-bone18
-  * linux-image-6.13.10-bone14
-  * linux-image-6.14.1-bone9
+  * linux-image-6.12.23-armv7-lpae-x3
+  * linux-image-6.12.23-bone19
+  * linux-image-6.13.11-bone15
+  * linux-image-6.14.2-bone10
+  * linux-image-6.6.85-armv7-lpae-x24
+  * linux-image-6.6.85-armv7-rt-x24
+  * linux-image-6.6.85-armv7-x24
+  * linux-image-6.6.85-bone24
+  * linux-image-6.6.85-bone-rt-r24
 
- -- Robert Nelson <robertcnelson@gmail.com>  Thu, 10 Apr 2025 10:59:23 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Fri, 11 Apr 2025 14:01:01 -0500
 
