bbb.io-kernel (1.20250414.0)
Signed-off-by: Robert Nelson <robertcnelson@gmail.com>

--- a/bbb.io-kernel/suite/trixie/debian/changelog
+++ b/bbb.io-kernel/suite/trixie/debian/changelog
@@ -1,15 +1,12 @@
-bbb.io-kernel (1.20250411.0-0~trixie+20250411) trixie; urgency=low
+bbb.io-kernel (1.20250414.0-0~trixie+20250414) trixie; urgency=low
 
   * Kernel Updates
-  * linux-image-6.12.23-armv7-lpae-x3
-  * linux-image-6.12.23-bone19
-  * linux-image-6.13.11-bone15
-  * linux-image-6.14.2-bone10
-  * linux-image-6.6.85-armv7-lpae-x24
-  * linux-image-6.6.85-armv7-rt-x24
-  * linux-image-6.6.85-armv7-x24
-  * linux-image-6.6.85-bone24
-  * linux-image-6.6.85-bone-rt-r24
+  * linux-image-6.12.17-ti-arm32-r8
+  * linux-image-6.15.0-rc2-bone3
+  * linux-image-6.15.0-rc2-multiv7-r1
+  * linux-image-6.15.0-rc2-omap2plus-r1
+  * linux-image-6.6.58-ti-arm32-r11
+  * linux-image-6.6.58-ti-rt-arm32-r11
 
- -- Robert Nelson <robertcnelson@gmail.com>  Fri, 11 Apr 2025 14:01:01 -0500
+ -- Robert Nelson <robertcnelson@gmail.com>  Mon, 14 Apr 2025 20:19:00 -0500
 
